# heo-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py
app/api/: routes.py
app/chunking/: splitter.py
app/embedding/: local_embed.py
app/evaluation/: dataset.json  evaluator.py  results.json
app/generation/: llm.py  prompt_templates.py
app/ingestion/: loader.py
app/ingestion/feishu/: client.py  converter.py  importer.py
app/pipeline/: ingestion_pipeline.py  rag_pipeline.py
app/pipeline/data/: rag.db
app/pipeline/data/chroma/: chroma.sqlite3
app/retrieval/: hybrid.py  reranker.py
app/storage/: db.py  vector_store.py
data/: rag.db  rag.db-shm  rag.db-wal
data/chroma/: chroma.sqlite3
data/documents/: 秀秀训练营简介.md
