[project]
name = "llm-demo"
version = "0.2.0"
description = "秀秀训练营 RAG 平台（LangChain 版）"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.0",
    "langchain-core>=1.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "chromadb>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",
    "python-pptx>=0.7.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "apscheduler>=3.10.0",
]
